--- a/Homepage.html
+++ b/Homepage.html
@@ -8,12 +8,13 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./styles/homepage.css">
+    <link rel="stylesheet" href="./styles/navbar.css">
     <link rel="stylesheet" href="./styles/global.css">
       <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600;700&display=swap" rel="stylesheet">
     <!-- Add AOS Library -->
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
 
 <body>
@@ -21,7 +22,6 @@
 <header>
   <div class="heading" data-aos="fade-down" data-aos-duration="1000">
     <ul class="heading-list mt-1">
-
       <li class="heading-content-email"><i class="fas fa-envelope"></i> kmc@psau.edu.ph</li>
       <li class="heading-content-phone"><i class="fas fa-phone"></i> +63 900 000 0000</li>
       <li class="heading-content-location"><i class="fas fa-map-marker-alt"></i> PAC, San Agustin, Magalang, Pampanga, Philippines </li>
@@ -29,7 +29,7 @@
         <a href="https://www.facebook.com/psau.kmc" class="social-icon" target="_blank"><i class="fa-brands fa-facebook"></i></a>
         <a href="#" class="social-icon"><i class="fa-brands fa-youtube"></i></a>
         <a href="#" class="social-icon"><i class="fa-brands fa-tiktok"></i></a>
-        <a href="#" class="social-icon"><i class="fas fa-envelope"></i></a>
+        <a href="mailto:kmc@psau.edu.ph" class="social-icon"><i class="fas fa-envelope"></i></a>
       </li>
     </ul>
   </div>
@@ -48,27 +48,24 @@
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
       <ul class="navbar-nav text-center">
-        <li class="nav-item">
-          <a class="nav-link text-white active" href="index.html">Home</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button"
-            data-bs-toggle="dropdown" aria-expanded="false">
-            Services
-          </a>
-          <ul class="dropdown-menu shadow-lg border-0 mt-2" aria-labelledby="servicesDropdown">
-            <li><a class="dropdown-item py-2 px-4 text-dark fw-semibold" href="PS.html">Plagiarism Scan</a></li>
-            <li><a class="dropdown-item py-2 px-4 text-dark fw-semibold" href="PA.html">Promotional Activities</a></li>
-            <li><a class="dropdown-item py-2 px-4 text-dark fw-semibold" href="KSA.html">Knowledge Sharing</a></li>
-          </ul>
-        </li>
+            <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
+            <li class="nav-item dropdown dropdown-hover">
+                <a class="nav-link dropdown-toggle text-white" href="#" id="servicesDropdown" role="button">
+                    Services
+                </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item text-dark" href="PS.html">Plagiarism Scan</a></li>
+                        <li><a class="dropdown-item text-dark" href="PA.html">Promotional Activities</a></li>
+                        <li><a class="dropdown-item text-dark" href="KSA.html">Knowledge Sharing</a></li>
+                    </ul>
+            </li>
             <li class="nav-item"><a class="nav-link text-white" href="Tech1.html">Technologies</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="#research">Research</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="#sdgs">SDGs</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="#about">About</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="contact.html">Contact</a></li>
       </ul>
     </div>
   </div>
@@ -85,24 +82,6 @@
     <!-- <h1>Welcome to Our Site</h1> -->
   </div>
 </section>
-
-<!-- Video Section -->
-<!-- <div class="container my-5">
-    <div class="video-container d-flex justify-content-center align-items-center">
-        <video autoplay muted loop>
-            <source src="./assets/videos/1st page back ground.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-    </div>
-</div> -->
-
- <!-- Google Map Embed -->
-    <!-- <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m21!1m12!1m3!1d230.28086730520036!2d120.69381148827526!3d15.217536533196059!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m6!3e6!4m0!4m3!3m2!1d15.217565326479955!2d120.69387250853227!5e1!3m2!1sen!2sph!4v1748419617295!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" 
-        allowfullscreen="" 
-        loading="lazy" 
-        referrerpolicy="no-referrer-when-downgrade">
-    </iframe> -->
 
 <!-- Media Resources -->
 <section id="media-resources" class="py-5">
@@ -304,123 +283,122 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="200">
+                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="100">
                     <a href="./sdg-pages/sdg 2.html" class="text-decoration-none">
                         <div class="card sdg-card">
                             <img src="sdgs/2.png" class="card-img-top" alt="SDG 2">
                         </div>
                     </a>
                 </div>
-                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="300">
+                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="100">
                     <a href="./sdg-pages/sdg 3.html" class="text-decoration-none">
                         <div class="card sdg-card">
                             <img src="sdgs/3.png" class="card-img-top" alt="SDG 3">
                         </div>
                     </a>
                 </div>
-                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="400">
+                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="100">
                     <a href="./sdg-pages/sdg 4.html" class="text-decoration-none">
                         <div class="card sdg-card">
                             <img src="sdgs/4.png" class="card-img-top" alt="SDG 4">
                         </div>
                     </a>
                 </div>
-                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="500">
+                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="400">
                     <a href="./sdg-pages/sdg 5.html" class="text-decoration-none">
                         <div class="card sdg-card">
                             <img src="sdgs/5.png" class="card-img-top" alt="SDG 5">
                         </div>
                     </a>
                 </div>
-                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="600">
+                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="400">
                     <a href="./sdg-pages/sdg 6.html" class="text-decoration-none">
                         <div class="card sdg-card">
                             <img src="sdgs/6.png" class="card-img-top" alt="SDG 6">
                         </div>
                     </a>
                 </div>
-                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="700">
+                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="400">
                     <a href="./sdg-pages/sdg 7.html" class="text-decoration-none">
                         <div class="card sdg-card">
                             <img src="sdgs/7.png" class="card-img-top" alt="SDG 7">
                         </div>
                     </a>
                 </div>
-                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="800">
+                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="400">
                     <a href="./sdg-pages/sdg 8.html" class="text-decoration-none">
                         <div class="card sdg-card">
                             <img src="sdgs/8.png" class="card-img-top" alt="SDG 8">
                         </div>
                     </a>
                 </div>
-                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="900">
+                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="500">
                     <a href="./sdg-pages/sdg 9.html" class="text-decoration-none">
                         <div class="card sdg-card">
                             <img src="sdgs/9.png" class="card-img-top" alt="SDG 9">
                         </div>
                     </a>
                 </div>
-                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="1000">
+                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="500">
                     <a href="./sdg-pages/sdg 10.html" class="text-decoration-none">
                         <div class="card sdg-card">
                             <img src="sdgs/10.png" class="card-img-top" alt="SDG 10">
                         </div>
                     </a>
                 </div>
-                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="1100">
+                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="500">
                     <a href="./sdg-pages/sdg 11.html" class="text-decoration-none">
                         <div class="card sdg-card">
                             <img src="sdgs/11.png" class="card-img-top" alt="SDG 11">
                         </div>
                     </a>
                 </div>
-                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="1200">
+                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="500">
                     <a href="./sdg-pages/sdg 12.html" class="text-decoration-none">
                         <div class="card sdg-card">
                             <img src="sdgs/12.png" class="card-img-top" alt="SDG 12">
                         </div>
                     </a>
                 </div>
-                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="1300">
+                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="600">
                     <a href="./sdg-pages/sdg 13.html" class="text-decoration-none">
                         <div class="card sdg-card">
                             <img src="sdgs/13.png" class="card-img-top" alt="SDG 13">
                         </div>
                     </a>
                 </div>
-                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="1400">
+                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="600">
                     <a href="./sdg-pages/sdg 14.html" class="text-decoration-none">
                         <div class="card sdg-card">
                             <img src="sdgs/14.png" class="card-img-top" alt="SDG 14">
                         </div>
                     </a>
                 </div>
-                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="1500">
+                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="600">
                     <a href="./sdg-pages/sdg 15.html" class="text-decoration-none">
                         <div class="card sdg-card">
                             <img src="sdgs/15.png" class="card-img-top" alt="SDG 15">
                         </div>
                     </a>
                 </div>
-                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="1600">
+                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="600">
                     <a href="./sdg-pages/sdg 16.html" class="text-decoration-none">
                         <div class="card sdg-card">
                             <img src="sdgs/16.png" class="card-img-top" alt="SDG 16">
                         </div>
                     </a>
                 </div>
-                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="1700">
+                <div class="col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="700">
                     <a href="./sdg-pages/sdg 17.html" class="text-decoration-none">
                         <div class="card sdg-card">
                             <img src="sdgs/17.png" class="card-img-top" alt="SDG 17">
                         </div>
                     </a>
                 </div>
-    
             <!-- Add all other SDG cards similarly here -->
     
             <!-- Last card (banner) -->
-            <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="1800">
+            <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="700">
             <a href="#sdgs" class="text-decoration-none">
                 <div class="card h-100 shadow-sm border-0 sdg-card-hover">
                 <img src="sdgs/SDGS-banner.png" class="card-img-top p-2" alt="SDG Banner">
@@ -445,7 +423,7 @@
             <div class="about-box p-3">
             <img src="assets/img/kmlogo.png" alt="Kamp Maalam Logo" class="about-logo mb-3">
             <p>
-                The Knowledge Management (KM) unit operates to foster an environment where knowledge resources 
+                The <strong> Knowledge Management</strong> (KM) unit operates to foster an environment where knowledge resources 
                 are acquired, promoted, and shared in alignment with quality assurance standards, supporting the continuous
                 improvement and accessibility of the information it handles. By establishing a centralized framework, 
                 it creates space and best practices for knowledge sharing activities, making knowledge-based assets 
@@ -458,7 +436,7 @@
         <div class="right-col mb-4" data-aos="fade-left">
             <div class="about-box p-3 text-center">
             <p>
-                Kamp Maalam is an initiative of KM's knowledge-sharing activities. It seeks to modernize practices by 
+                <strong>Kamp Maalam </strong>is an initiative of KM's knowledge-sharing activities. It seeks to modernize practices by 
                 leveraging available resources and expanding its reach to a broader audience. The ultimate goal is to 
                 foster a community where knowledge is shared, nurtured, and grows.
             </p>
@@ -487,9 +465,8 @@
       <div class="col-md-3 mb-4">
         <h5>Quick Links</h5>
         <ul class="list-unstyled">
-          <li><a href="#" class="text-decoration-none">Home</a></li>
-          <li><a href="#" class="text-decoration-none">About</a></li>
-          <li><a href="#" class="text-decoration-none">Services</a></li>
+          <li><a href="#Homepage" class="text-decoration-none">Home</a></li>
+          <li><a href="#about" class="text-decoration-none">About</a></li>
           <li><a href="#" class="text-decoration-none">Contact</a></li>
         </ul>
       </div>
@@ -514,8 +491,8 @@
       </div>
 
     </div>
-    <div class="text-center mt-4 pt-3 border-top border-light">
-      <p class="mb-0">&copy; Philippine Copyright 2025 by Pampanga State Agricultural University</p>
+    <div class="row text-center mt-4 pt-3   footer-bottom">
+    <p class="mb-0">&copy; Philippine Copyright 2025 by Pampanga State Agricultural University</p>
     </div>
   </div>
 </footer>
@@ -555,20 +532,50 @@
 
   </body>
 <script>
-  window.addEventListener("scroll", function () {
+  function handleNavbarScroll() {
     const navbar = document.querySelector(".navbar");
     const socials = document.getElementById("floatingSocials");
     const scrollPosition = window.scrollY;
 
     if (scrollPosition > 50) {
-      navbar.classList.add("sticky-active");
-      socials.classList.remove("d-none");
+      navbar?.classList.add("sticky-active");
+      socials?.classList.remove("d-none");
     } else {
-      navbar.classList.remove("sticky-active");
-      socials.classList.add("d-none");
+      navbar?.classList.remove("sticky-active");
+      socials?.classList.add("d-none");
     }
+  }
+
+  window.addEventListener("scroll", handleNavbarScroll);
+  window.addEventListener("load", handleNavbarScroll); 
+  window.addEventListener("resize", handleNavbarScroll); 
+</script>
+<script>
+  document.querySelectorAll('.dropdown-hover').forEach(function (dropdown) {
+    dropdown.addEventListener('mouseenter', function () {
+      const menu = this.querySelector('.dropdown-menu');
+      menu.classList.add('show');
+    });
+    dropdown.addEventListener('mouseleave', function () {
+      const menu = this.querySelector('.dropdown-menu');
+      menu.classList.remove('show');
+    });
   });
 </script>
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const links = document.querySelectorAll(".navbar-nav .nav-link");
+    const currentPath = window.location.pathname.split("/").pop();
+
+    links.forEach(link => {
+      const href = link.getAttribute("href");
+      if (href === currentPath || (currentPath === "" && href === "index.html")) {
+        link.classList.add("active-underline");
+      }
+    });
+  });
+</script>
+
 
 
     <!-- Bootstrap JS Bundle -->
