--- a/contact.html
+++ b/contact.html
@@ -1,31 +1,23 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TECHNOLOGIES</title>
-  
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="./styles/tech1.css">
-    <link rel="stylesheet" href="/styles/global.css">
-  
-  <!-- Google Fonts -->
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>KAMP MAALAM</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/contact.css">
+    <link rel="stylesheet" href="./styles/global.css">
+      <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600;700&display=swap" rel="stylesheet">
+    <!-- Add AOS Library -->
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
-  <!-- EmailJS SDK -->
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-  <script type="text/javascript">
-    (function(){
-      emailjs.init("YOUR_PUBLIC_KEY"); // Replace with your EmailJS public key
-    })();
-  </script>
-
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
 
 <body>
-  <!-- Header -->
+<!-- Header -->
 <header>
   <div class="heading" data-aos="fade-down" data-aos-duration="1000">
     <ul class="heading-list mt-1">
@@ -41,68 +33,88 @@
     </ul>
   </div>
 </header>
+<div class="floating-socials d-none" id="floatingSocials" >
+  <a href="https://www.facebook.com/psau.kmc" class="social-icon" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+  <a href="#" class="social-icon"><i class="fa-brands fa-youtube"></i></a>
+  <a href="#" class="social-icon"><i class="fa-brands fa-tiktok"></i></a>
+  <a href="#" class="social-icon"><i class="fas fa-envelope"></i></a>
+</div>
+
 <!-- Navbar -->
- 
-  <nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container-fluid justify-content-center"> <!-- center content -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-          <ul class="navbar-nav text-center">
-              <li class="nav-item"><a class="nav-link text-white" href="Homepage.html">Home</a></li>
-              <li class="nav-item"><a class="nav-link text-white" href="ictv.html">ICTV</a></li>
-              <li class="nav-item"><a class="nav-link text-white" href="iec.html">IEC Materials</a></li>
-              <li class="nav-item"><a class="nav-link text-white" href="newsletter.html">Newsletter</a></li>
-              <li class="nav-item"><a class="nav-link text-white" href="modules.html">Modules</a></li>
-              <li class="nav-item"><a class="nav-link text-white" href="tech portfolio.html">Tech Portfolio</a></li>
-          </ul>
-        </div>
-    </div>
-  </nav>
-      <!-- Background Video -->
-  <div class="background-container">
-    <video autoplay muted loop>
-      <source src="/assets/videos/Orange Abstract Background YouTube Thumbnail1.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-  </div>
-  <!-- Cards -->
-  <div class="cards-container">
-    <div class="card">
-      <img src="tech/11.png" alt="Tech 1" onclick="openModal(this)">
-    </div>
-    <div class="card">
-      <img src="tech/22.png" alt="Tech 2" onclick="openModal(this)">
-    </div>
-    <div class="card">
-      <img src="tech/33.png" alt="Tech 3" onclick="openModal(this)">
+<nav class="navbar navbar-expand-lg navbar-dark " data-aos="fade-down" data-aos-duration="1000"style="position: sticky; top: 0; z-index: 999;">
+  <div class="container-fluid justify-content-center">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+      <ul class="navbar-nav text-center">
+        <li class="nav-item">
+          <a class="nav-link text-white active" href="Homepage.html">Home</a>
+        </li>
+            <li class="nav-item dropdown dropdown-hover">
+            <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button">
+                Services
+            </a>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item text-dark" href="PS.html">Plagiarism Scan</a></li>
+                <li><a class="dropdown-item text-dark" href="PA.html">Promotional Activities</a></li>
+                <li><a class="dropdown-item text-dark" href="KSA.html">Knowledge Sharing</a></li>
+            </ul>
+            </li>
+            <li class="nav-item"><a class="nav-link text-white" href="Tech1.html">Technologies</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html#research">Research</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html#sdgs">SDGs</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html#about">About</a></li>
+            <li class="nav-item"><a class="nav-link text-white active" href="Homepage.html#about">Contact</a></li>
+      </ul>
     </div>
   </div>
+</nav>
 
-  <!-- Footer -->
-  <footer>
-    <p>&copy; Philippine Copyright 2025 by Pampanga State Agricultural University</p>
-  </footer>
-
-  <!-- Modal -->
-  <div class="modal fade" id="imageModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-lg">
-      <div class="modal-content bg-transparent border-0 position-relative">
-        <div class="modal-body text-center">
-          <button id="prevBtn" class="modal-btn">&#8592;</button>
-          <img src="" id="modalImage" class="modal-img" alt="Zoomed Image">
-          <button id="nextBtn" class="modal-btn">&#8594;</button>
-        </div>
-      </div>
-    </div>
+<!-- Google Map Embed -->
+<div class="map-container d-flex justify-content-center py-5">
+  <iframe 
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2476.777044480476!2d120.69328491244967!3d15.217683326258085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3396ef00529fdd05%3A0x7c6e3080efd62457!2sInformation%20Communication%20Technology%20Research%20and%20Development%20-%20PSAU!5e0!3m2!1sen!2sph!4v1750837917550!5m2!1sen!2sph"
+    width="80%" 
+    height="300" 
+    style="border:0;" 
+    allowfullscreen="" 
+    loading="lazy" 
+    referrerpolicy="no-referrer-when-downgrade">
+  </iframe>  
+</div>
+  <section class="contact text-center">
+    <h2 class="text-center mb-4 section-title" data-aos="fade-up">
+        Contact us
+    <hr class="hr">
+    </h2>
+      <!-- Comment Section -->
+  <div class="comment-section">
+    <h3 class="mb-4">Leave a Comment</h3>
+    <form class="comment-form" id="commentForm">
+      <input type="text" id="name" placeholder="Your Name" required />
+      <textarea id="comment" placeholder="Your Comment" rows="4" required></textarea>
+      <button type="submit">Submit</button>
+    </form>
+    <div id="commentList" class="comment-list"></div>
   </div>
+  </section>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Main Script -->
+
+  </body>
+
+
+
+    <!-- Bootstrap JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+  <!-- Main Script for leave comments -->
   <script>
     document.addEventListener("DOMContentLoaded", function () {
       const commentList = document.getElementById("commentList");
@@ -240,4 +252,7 @@
   </script>
 
 </body>
+
 </html>
+
+
