--- a/ictv.html
+++ b/ictv.html
@@ -6,53 +6,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ICTV</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="/styles/ictv.css">
+    <link rel="stylesheet" href="./styles/media-resource-navbar.css">
+    <link rel="stylesheet" href="/styles/global.css">
     <style>
  
     </style>
 </head>
 
 <body>
-
-      <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+<!-- Header -->
+<header>
+  <div class="heading" data-aos="fade-down" data-aos-duration="1000">
+    <ul class="heading-list mt-1">
+      <li class="heading-content-email"><i class="fas fa-envelope"></i> kmc@psau.edu.ph</li>
+      <li class="heading-content-phone"><i class="fas fa-phone"></i> +63 900 000 0000</li>
+      <li class="heading-content-location"><i class="fas fa-map-marker-alt"></i> PAC, San Agustin, Magalang, Pampanga, Philippines </li>
+      <li class="heading-content-social">
+        <a href="https://www.facebook.com/psau.kmc" class="social-icon" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#" class="social-icon"><i class="fa-brands fa-youtube"></i></a>
+        <a href="#" class="social-icon"><i class="fa-brands fa-tiktok"></i></a>
+        <a href="mailto:kmc@psau.edu.ph" class="social-icon"><i class="fas fa-envelope"></i></a>
+      </li>
+    </ul>
+  </div>
+</header>
+    <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand mx-auto d-flex align-items-center" href="Homepage.html">Home</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        <!-- Navbar Toggler (right-aligned) -->
+        <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link text-white" href="ictv.html">ICTV</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="iec.html">IEC Materials</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="newsletter.html">Newsletter</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="modules.html">Modules</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="tech portfolio.html">Tech Portfolio</a></li>
+        </button>
+
+        <!-- Collapsible Nav Links -->
+        <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mx-auto text-center">
+            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="ictv.html">ICTV</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="iec.html">IEC Materials</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="newsletter.html">Newsletter</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="modules.html">Modules</a></li>
+            <li class="nav-item"><a class="nav-link text-white active" href="tech portfolio.html">Tech Portfolio</a></li>
         </ul>
-      </div>
+        </div>
     </div>
-  </nav>
+    </nav>
+
 
     <!-- Background Video -->
     <div class="background-container">
         <video autoplay muted loop>
-            <source src="ictv PAGE VID.mp4" type="video/mp4">
+            <source src="./assets/videos/ictv PAGE VID.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
 
     <!-- Main Section -->
     <section>
-        <div class="container my-5">
+        <div class="container-page my-5">
             <div class="row justify-content-center">
                 <!-- Cards -->
                 <div class="col-md-4 mb-4">
                     <div class="card">
                         <img src="/assets/img/ep 1.png"  class="card-img-top" alt="ICTV Episode 1">
                         <div class="card-body">
-                            <h5 class="card-title">ICTV EPISODE 1</h5>
-                            <p class="card-text">ICTv Episode 1: AGLIBUT SWEET TAMARIND</p>
+                            <h5 class="ictv-card-title">ICTV EPISODE 1</h5>
+                            <p class="card-text">AGLIBUT SWEET TAMARIND</p>
                             <a href="https://www.facebook.com/watch/?v=385537333118296" target="_blank" class="btn btn-primary">Watch Episode</a>
                         </div>
                     </div>
@@ -62,7 +83,7 @@
                     <div class="card">
                         <img src="/assets/img/ep 2.png"  class="card-img-top" alt="ICTV Episode 2">
                         <div class="card-body">
-                            <h5 class="card-title">ICTV EPISODE 2</h5>
+                            <h5 class="ictv-card-title">ICTV EPISODE 2</h5>
                             <p class="card-text">Embracing a nourishing path to wellness.</p>
                             <a href="https://www.facebook.com/ictrdpsau/videos/1134817413708942" target="_blank" class="btn btn-primary">Watch Episode</a>
                         </div>
@@ -73,7 +94,7 @@
                     <div class="card">
                         <img src="/assets/img/ep 3.png"  class="card-img-top" alt="ICTV Episode 3">
                         <div class="card-body">
-                            <h5 class="card-title">ICTV EPISODE 3</h5>
+                            <h5 class="ictv-card-title">ICTV EPISODE 3</h5>
                             <p class="card-text">Waste Management</p>
                             <a href="https://www.facebook.com/ictrdpsau/videos/227609776097679" target="_blank" class="btn btn-primary">Watch Episode</a>
                         </div>
@@ -84,7 +105,7 @@
                     <div class="card">
                         <img src="/assets/img/ictv 4.png"  class="card-img-top" alt="ICTV Episode 4">
                         <div class="card-body">
-                            <h5 class="card-title">ICTV EPISODE 4</h5>
+                            <h5 class="ictv-card-title">ICTV EPISODE 4</h5>
                             <p class="card-text">Embracing a nourishing path to wellness.</p>
                             <a href="https://www.facebook.com/ictrdpsau/videos/658010909530119"target="_blank" class="btn btn-primary">Watch Episode</a>
                         </div>
@@ -95,7 +116,7 @@
                     <div class="card">
                         <img src="/assets/img/icrv ep 5.png"  class="card-img-top" alt="ICTV Episode 5">
                         <div class="card-body">
-                            <h5 class="card-title">ICTV EPISODE 5</h5>
+                            <h5 class="ictv-card-title">ICTV EPISODE 5</h5>
                             <p class="card-text">Elevate your harvest with premium fertilizer.</p>
                             <a href="https://www.facebook.com/ictrdpsau/videos/1869446936782287" target="_blank"class="btn btn-primary">Watch Episode</a>
                         </div>
@@ -106,7 +127,7 @@
                     <div class="card">
                         <img src="/assets/img/ictv ep 6.png"  class="card-img-top" alt="ICTV Episode 6">
                         <div class="card-body">
-                            <h5 class="card-title">ICTV EPISODE 6</h5>
+                            <h5 class="ictv-card-title">ICTV EPISODE 6</h5>
                             <p class="card-text">Cultivating abundance through fertilizer application.</p>
                             <a href="https://www.facebook.com/ictrdpsau/videos/6486186524792074"target="_blank" class="btn btn-primary">Watch Episode</a>
                         </div>
@@ -117,7 +138,7 @@
                     <div class="card">
                         <img src="/assets/img/ictv ep 7.png"  class="card-img-top" alt="ICTV Episode 7">
                         <div class="card-body">
-                            <h5 class="card-title">ICTV EPISODE 7</h5>
+                            <h5 class="ictv-card-title">ICTV EPISODE 7</h5>
                             <p class="card-text">Kamalayan sa Palayan.</p>
                             <a href="https://www.facebook.com/ictrdpsau/videos/2513347652160787" target="_blank" class="btn btn-primary">Watch Episode</a>
                         </div>
@@ -128,7 +149,7 @@
                     <div class="card">
                         <img src="/assets/img/ectv ep 8.png"  class="card-img-top" alt="ICTV Episode 8">
                         <div class="card-body">
-                            <h5 class="card-title">ICTV EPISODE 8</h5>
+                            <h5 class="ictv-card-title">ICTV EPISODE 8</h5>
                             <p class="card-text">Sisid sa Aquaculture</p>
                             <a href="https://www.facebook.com/ictrdpsau/videos/545326328065713" target="_blank" class="btn btn-primary">Watch Episode</a>
                         </div>
@@ -139,7 +160,7 @@
                     <div class="card">
                         <img src="/assets/img/ictv ep 9.png"  class="card-img-top" alt="ICTV Episode 9">
                         <div class="card-body">
-                            <h5 class="card-title">ICTV EPISODE 9</h5>
+                            <h5 class="ictv-card-title">ICTV EPISODE 9</h5>
                             <p class="card-text">Food Supplements for Tilapia</p>
                             <a href="https://www.facebook.com/ictrdpsau/videos/1120858289451940" target="_blank" class="btn btn-primary">Watch Episode</a>
                         </div>
@@ -150,7 +171,7 @@
                     <div class="card">
                         <img src="/assets/img/ictv ep 10.png"  class="card-img-top" alt="ICTV Episode 10">
                         <div class="card-body">
-                            <h5 class="card-title">ICTV EPISODE 10</h5>
+                            <h5 class="ictv-card-title">ICTV EPISODE 10</h5>
                             <p class="card-text">Weed Management</p>
                             <a href="https://www.facebook.com/ictrdpsau/videos/1097242865536134" target="_blank" class="btn btn-primary">Watch Episode</a>
                         </div>
@@ -159,10 +180,10 @@
 
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="/assets/img/ep 11.png"  class="card-img-top" alt="ICTV Episode 11">
+                        <img src="/assets/img/ictv ep 11.png"  class="card-img-top" alt="ICTV Episode 11">
                         <div class="card-body">
-                            <h5 class="card-title">ICTV EPISODE 11</h5>
-                            <p class="card-text">Weed Management</p>
+                            <h5 class="ictv-card-title">ICTV EPISODE 11</h5>
+                            <p class="card-text"><em>text here</em></p>
                             <a href="https://www.facebook.com/ictrdpsau/videos/1225786205694099" target="_blank" class="btn btn-primary">Watch Episode</a>
                         </div>
                     </div>
