--- a/iec.html
+++ b/iec.html
@@ -5,12 +5,53 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>IEC Materials</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="./styles/iec.css">
+  <link rel="stylesheet" href="./styles/media-resource-navbar.css">
+  <link rel="stylesheet" href="/styles/global.css">
 
 </head>
-<body>
 
-  <!-- Background Video -->
+<body>
+<!-- Header -->
+<header>
+  <div class="heading" data-aos="fade-down" data-aos-duration="1000">
+    <ul class="heading-list mt-1">
+      <li class="heading-content-email"><i class="fas fa-envelope"></i> kmc@psau.edu.ph</li>
+      <li class="heading-content-phone"><i class="fas fa-phone"></i> +63 900 000 0000</li>
+      <li class="heading-content-location"><i class="fas fa-map-marker-alt"></i> PAC, San Agustin, Magalang, Pampanga, Philippines </li>
+      <li class="heading-content-social">
+        <a href="https://www.facebook.com/psau.kmc" class="social-icon" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#" class="social-icon"><i class="fa-brands fa-youtube"></i></a>
+        <a href="#" class="social-icon"><i class="fa-brands fa-tiktok"></i></a>
+        <a href="mailto:kmc@psau.edu.ph" class="social-icon"><i class="fas fa-envelope"></i></a>
+      </li>
+    </ul>
+  </div>
+</header>             
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <div class="container-fluid justify-content-center"> <!-- center content -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav text-center">
+            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="ictv.html">ICTV</a></li>
+            <li class="nav-item"><a class="nav-link text-white active" href="iec.html">IEC Materials</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="newsletter.html">Newsletter</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="modules.html">Modules</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="tech portfolio.html">Tech Portfolio</a></li>
+        </ul>
+        </div>
+    </div>
+  </nav>
+
+  <!-- IEC Section -->
+  <section id="IEC-Materials" class="section-container" >
+      <!-- Background Video -->
   <div class="background-container">
     <video autoplay muted loop>
       <source src="/assets/videos/Orange Abstract Background YouTube Thumbnail1.mp4" type="video/mp4">
@@ -18,40 +59,16 @@
     </video>
   </div>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-    <div class="container-fluid">
-      <a class="navbar-brand mx-auto d-flex align-items-center" href="Homepage.html">Home</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link text-white" href="ictv.html">ICTV</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="iec.html">IEC Materials</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="newsletter.html">Newsletter</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="modules.html">Modules</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="tech portfolio.html">Tech Portfolio</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <!-- IEC Section -->
-  <section id="IEC-Materials" class="section-container">
-    <div class="container">
-      <h2>IEC Materials</h2>
+    <div class="container-page">
       <div class="row mt-4">
-
         <!-- Card 1 -->
         <div class="col-md-4 mb-4">
           <div class="card h-100">
-            <img src="https://via.placeholder.com/350x200.png?text=IEC+Thumbnail" class="card-img-top" alt="IEC Material">
+            <img src="./assets/img/iecimg1.png" class="card-img-top" alt="IEC Material">
             <div class="card-body">
               <h5 class="card-title">Episode 1</h5>
               <p class="card-text">Discover the basics of fisheries and sustainable practices.</p>
-              <a href="https://www.facebook.com/ictrdpsau/videos/658010909530119" class="btn btn-primary">Watch Episode</a>
+              <a href="https://www.facebook.com/ictrdpsau/videos/658010909530119" class="btn btn-primary"target="_blank">View</a>
             </div>
           </div>
         </div>
@@ -59,11 +76,11 @@
         <!-- Card 2 -->
         <div class="col-md-4 mb-4">
           <div class="card h-100">
-            <img src="https://via.placeholder.com/350x200.png?text=IEC+Thumbnail" class="card-img-top" alt="IEC Material">
+            <img src="./assets/img/iecimg2.png" class="card-img-top" alt="IEC Material">
             <div class="card-body">
               <h5 class="card-title">Episode 2</h5>
               <p class="card-text">Exploring aquaculture techniques and community involvement.</p>
-              <a href="https://www.facebook.com/ictrdpsau/videos/1869446936782287" class="btn btn-primary">Watch Episode</a>
+              <a href="https://www.facebook.com/ictrdpsau/videos/1869446936782287" class="btn btn-primary"target="_blank">View</a>
             </div>
           </div>
         </div>
@@ -71,17 +88,19 @@
         <!-- Card 3 -->
         <div class="col-md-4 mb-4">
           <div class="card h-100">
-            <img src="https://via.placeholder.com/350x200.png?text=IEC+Thumbnail" class="card-img-top" alt="IEC Material">
+            <img src="./assets/img/iecimg3.png" class="card-img-top" alt="IEC Material">
             <div class="card-body">
               <h5 class="card-title">Episode 3</h5>
               <p class="card-text">Innovations in agriculture and farming practices for rural development.</p>
-              <a href="https://www.facebook.com/ictrdpsau/videos/6486186524792074" class="btn btn-primary">Watch Episode</a>
+              <a href="https://www.facebook.com/ictrdpsau/videos/6486186524792074" class="btn btn-primary"target="_blank">View</a>
             </div>
           </div>
         </div>
 
       </div>
+      
     </div>
+    
   </section>
 
   <!-- Footer -->
