--- a/modules.html
+++ b/modules.html
@@ -7,7 +7,10 @@
     <title>IEC Materials</title>
     <!-- Link to Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="./styles/modules.css">
+    <link rel="stylesheet" href="./styles/media-resource-navbar.css">
+    <link rel="stylesheet" href="/styles/global.css">
 
 </head>
 
@@ -20,48 +23,63 @@
             Your browser does not support the video tag.
         </video>
     </div>
-
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-    <div class="container-fluid">
-      <a class="navbar-brand mx-auto d-flex align-items-center" href="Homepage.html">Home</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+<!-- Header -->
+<header>
+  <div class="heading" data-aos="fade-down" data-aos-duration="1000">
+    <ul class="heading-list mt-1">
+      <li class="heading-content-email"><i class="fas fa-envelope"></i> kmc@psau.edu.ph</li>
+      <li class="heading-content-phone"><i class="fas fa-phone"></i> +63 900 000 0000</li>
+      <li class="heading-content-location"><i class="fas fa-map-marker-alt"></i> PAC, San Agustin, Magalang, Pampanga, Philippines </li>
+      <li class="heading-content-social">
+        <a href="https://www.facebook.com/psau.kmc" class="social-icon" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#" class="social-icon"><i class="fa-brands fa-youtube"></i></a>
+        <a href="#" class="social-icon"><i class="fa-brands fa-tiktok"></i></a>
+        <a href="mailto:kmc@psau.edu.ph" class="social-icon"><i class="fas fa-envelope"></i></a>
+      </li>
+    </ul>
+  </div>
+</header>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container-fluid justify-content-center"> <!-- center content -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link text-white" href="ictv.html">ICTV</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="iec.html">IEC Materials</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="newsletter.html">Newsletter</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="modules.html">Modules</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="tech portfolio.html">Tech Portfolio</a></li>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav text-center">
+            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="ictv.html">ICTV</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="iec.html">IEC Materials</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="newsletter.html">Newsletter</a></li>
+            <li class="nav-item"><a class="nav-link text-white active" href="modules.html">Modules</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="tech portfolio.html">Tech Portfolio</a></li>
         </ul>
-      </div>
+        </div>
     </div>
   </nav>
 
     <!-- PDF Viewer Section -->
     <section>
-        <div class="container my-5">
+        <div class="container my-5 " style="padding-top: 80px;">
             <div class="pdf-viewer">
-                <h4>Module 1: Introduction to Aquaculture<strong></h4>
+                <h4><strong>Module 1: Introduction to Aquaculture</strong></h4>
                 <iframe src="C:\Users\daryl\Desktop\WEBSITE\RESOURCES\pages\MODULES INSERT.pdf"></iframe>
             </div>
             <div class="pdf-viewer">
-                <h4>Module 2: Sustainable Farming Techniques<strong></h4>
+                <h4><strong>Module 2: Sustainable Farming Techniques</strong></h4>
                 <iframe src="C:\Users\daryl\Desktop\WEBSITE\RESOURCES\pages\MODULES INSERT.pdf"></iframe>
             </div>
             <div class="pdf-viewer">
-                <h4>Module 3: Disease Management in Fisheries<strong></h4>
+                <h4><strong>Module 3: Disease Management in Fisheries</strong></h4>
                 <iframe src="C:\Users\daryl\Desktop\WEBSITE\RESOURCES\pages\MODULES INSERT.pdf"></iframe>
             </div>
             <div class="pdf-viewer">
-                <h4>Module 4: Disease Management in Fisheries<strong></h4>
+                <h4><strong>Module 4: Disease Management in Fisheries</strong></h4>
                 <iframe src="C:\Users\daryl\Desktop\WEBSITE\RESOURCES\pages\MODULES INSERT.pdf"></iframe>
             </div>
             <div class="pdf-viewer">
-                <h4>Module 5: Disease Management in Fisheries<strong></h4>
+                <h4><strong>Module 5: Disease Management in Fisheries</strong></h4>
                 <iframe src="C:\Users\daryl\Desktop\WEBSITE\RESOURCES\pages\MODULES INSERT.pdf"></iframe>
             </div>
         </div>
