--- a/newsletter.html
+++ b/newsletter.html
@@ -5,42 +5,62 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>News Publications</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="./styles/newsletter.css">
+  <link rel="stylesheet" href="/styles/global.css">
+  <link rel="stylesheet" href="./styles/media-resource-navbar.css">
 
 </head>
 <body>
 
 <div class="background-container">
   <video autoplay muted loop>
-    <source src="videos/background.mp4" type="video/mp4">
+    <source src="/videos/background.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 </div>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-    <div class="container-fluid">
-      <a class="navbar-brand mx-auto d-flex align-items-center" href="Homepage.html">Home</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link text-white" href="ictv.html">ICTV</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="iec.html">IEC Materials</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="newsletter.html">Newsletter</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="modules.html">Modules</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="tech portfolio.html">Tech Portfolio</a></li>
+<!-- Header -->
+<header>
+  <div class="heading" data-aos="fade-down" data-aos-duration="1000">
+    <ul class="heading-list mt-1">
+      <li class="heading-content-email"><i class="fas fa-envelope"></i> kmc@psau.edu.ph</li>
+      <li class="heading-content-phone"><i class="fas fa-phone"></i> +63 900 000 0000</li>
+      <li class="heading-content-location"><i class="fas fa-map-marker-alt"></i> PAC, San Agustin, Magalang, Pampanga, Philippines </li>
+      <li class="heading-content-social">
+        <a href="https://www.facebook.com/psau.kmc" class="social-icon" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#" class="social-icon"><i class="fa-brands fa-youtube"></i></a>
+        <a href="#" class="social-icon"><i class="fa-brands fa-tiktok"></i></a>
+        <a href="mailto:kmc@psau.edu.ph" class="social-icon"><i class="fas fa-envelope"></i></a>
+      </li>
+    </ul>
+  </div>
+</header>
+
+      <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container-fluid justify-content-center"> <!-- center content -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav text-center">
+            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="ictv.html">ICTV</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="iec.html">IEC Materials</a></li>
+            <li class="nav-item"><a class="nav-link text-white active" href="newsletter.html">Newsletter</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="modules.html">Modules</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="tech portfolio.html">Tech Portfolio</a></li>
         </ul>
-      </div>
+        </div>
     </div>
-  </nav>
+    </nav>
 
   <!-- Background Video -->
   <div class="background-container">
     <video autoplay muted loop>
-      <source src="C:\Users\daryl\Desktop\WEBSITE\Orange Abstract Background YouTube Thumbnail1.mp4" type="video/mp4">
+      <source src="/assets/videos/Orange Abstract Background YouTube Thumbnail1.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
@@ -49,78 +69,78 @@
 <section class="container my-5">
   <div class="row g-4">
     <div class="col-md-6 col-lg-4">
-      <div class="pdf-card view-btn" data-bs-toggle="modal" data-bs-target="#pdfModal" data-pdf="C:\Users\daryl\Desktop\WEBSITE\NEWS_IPTBM In Focus, Volume 1, Issue 1.pdf">
-        <iframe src="C:\Users\daryl\Desktop\WEBSITE\NEWS_IPTBM In Focus, Volume 1, Issue 1.pdf"></iframe>
+      <div class="pdf-card view-btn" data-bs-toggle="modal" data-bs-target="#pdfModal" data-pdf="./assets/files/NEWS_IPTBM In Focus, Volume 1, Issue 1.pdf">
+        <iframe src="./assets/files/NEWS_IPTBM In Focus, Volume 1, Issue 1.pdf"></iframe>
       </div>
     </div>
 
     <!-- PDF 2 -->
     <div class="col-md-6 col-lg-4">
-      <div class="pdf-card view-btn" data-bs-toggle="modal" data-bs-target="#pdfModal" data-pdf="C:\Users\daryl\Desktop\WEBSITE\NEWS_Issue 2 Quarter 2 Final.pdf">
-        <iframe src="C:\Users\daryl\Desktop\WEBSITE\NEWS_Issue 2 Quarter 2 Final.pdf"></iframe>
+      <div class="pdf-card view-btn" data-bs-toggle="modal" data-bs-target="#pdfModal" data-pdf="./assets/files/NEWS_Issue 2 Quarter 2 Final.pdf">
+        <iframe src="./assets/files/NEWS_Issue 2 Quarter 2 Final.pdf"></iframe>
       </div>
     </div>
 
     <!-- PDF 3 -->
     <div class="col-md-6 col-lg-4">
-      <div class="pdf-card view-btn" data-bs-toggle="modal" data-bs-target="#pdfModal" data-pdf="C:\Users\daryl\Desktop\WEBSITE\NEWS_IP-TBM in Focus (V2,Q1) (1).pdf">
-        <iframe src="C:\Users\daryl\Desktop\WEBSITE\NEWS_IP-TBM in Focus (V2,Q1) (1).pdf"></iframe>
+      <div class="pdf-card view-btn" data-bs-toggle="modal" data-bs-target="#pdfModal" data-pdf="./assets/files/NEWS_IP-TBM in Focus (V2,Q1) (1).pdf">
+        <iframe src="./assets/files/NEWS_IP-TBM in Focus (V2,Q1) (1).pdf"></iframe>
       </div>
     </div>
 
     <!-- PDF 4 -->
     <div class="col-md-6 col-lg-4">
-      <div class="pdf-card view-btn" data-bs-toggle="modal" data-bs-target="#pdfModal" data-pdf="C:\Users\daryl\Desktop\WEBSITE\NEWS_IP-TBM in Focus (V2,Q2)..pdf">
-        <iframe src="C:\Users\daryl\Desktop\WEBSITE\NEWS_IP-TBM in Focus (V2,Q2)..pdf"></iframe>
+      <div class="pdf-card view-btn" data-bs-toggle="modal" data-bs-target="#pdfModal" data-pdf="./assets/files/NEWS_IP-TBM in Focus (V2,Q2)..pdf">
+        <iframe src="./assets/files/NEWS_IP-TBM in Focus (V2,Q2)..pdf"></iframe>
       </div>
     </div>
 
     <!-- PDF 5 -->
     <div class="col-md-6 col-lg-4">
-      <div class="pdf-card view-btn" data-bs-toggle="modal" data-bs-target="#pdfModal" data-pdf="C:\Users\daryl\Desktop\WEBSITE\NEWS_IP-TBM in Focus (V2,Q3)....pdf">
-        <iframe src="C:\Users\daryl\Desktop\WEBSITE\NEWS_IP-TBM in Focus (V2,Q3)....pdf"></iframe>
+      <div class="pdf-card view-btn" data-bs-toggle="modal" data-bs-target="#pdfModal" data-pdf="./assets/files/NEWS_IP-TBM in Focus (V2,Q3)....pdf">
+        <iframe src="./assets/files/NEWS_IP-TBM in Focus (V2,Q3)....pdf"></iframe>
       </div>
     </div>
 
     <!-- PDF 6 -->
     <div class="col-md-6 col-lg-4">
-      <div class="pdf-card view-btn" data-bs-toggle="modal" data-bs-target="#pdfModal" data-pdf="C:\Users\daryl\Desktop\WEBSITE\NEWS_Innovation In Focus Q4.pdf">
-        <iframe src="C:\Users\daryl\Desktop\WEBSITE\NEWS_Innovation In Focus Q4.pdf"></iframe>
+      <div class="pdf-card view-btn" data-bs-toggle="modal" data-bs-target="#pdfModal" data-pdf="./assets/files/NEWS_Innovation In Focus Q4.pdf">
+        <iframe src="./assets/files/NEWS_Innovation In Focus Q4.pdf"></iframe>
       </div>
     </div>
 
     <!-- PDF 7 -->
     <div class="col-md-6 col-lg-4">
-      <div class="pdf-card view-btn" data-bs-toggle="modal" data-bs-target="#pdfModal" data-pdf="C:\Users\daryl\Desktop\WEBSITE\NEWS_Innovation In Focus Q1.pdf">
-        <iframe src="C:\Users\daryl\Desktop\WEBSITE\NEWS_Innovation In Focus Q1.pdf"></iframe>
+      <div class="pdf-card view-btn" data-bs-toggle="modal" data-bs-target="#pdfModal" data-pdf="./assets/files/NEWS_Innovation In Focus Q1.pdf">
+        <iframe src="./assets/files/NEWS_Innovation In Focus Q1.pdf"></iframe>
       </div>
     </div>
 
     <!-- PDF 8 -->
     <div class="col-md-6 col-lg-4">
-      <div class="pdf-card view-btn" data-bs-toggle="modal" data-bs-target="#pdfModal" data-pdf="C:\Users\daryl\Desktop\WEBSITE\NEWS_Innovation In Focus Q3.pdf">
-        <iframe src="C:\Users\daryl\Desktop\WEBSITE\NEWS_Innovation In Focus Q3.pdf"></iframe>
+      <div class="pdf-card view-btn" data-bs-toggle="modal" data-bs-target="#pdfModal" data-pdf="./assets/files/NEWS_Innovation In Focus Q3.pdf">
+        <iframe src="./assets/files/NEWS_Innovation In Focus Q3.pdf"></iframe>
       </div>
     </div>
 
     <!-- PDF 9 -->
     <div class="col-md-6 col-lg-4">
-      <div class="pdf-card view-btn" data-bs-toggle="modal" data-bs-target="#pdfModal" data-pdf="C:\Users\daryl\Desktop\WEBSITE\NEWS_Innovation In Focus Q4.pdf">
-        <iframe src="C:\Users\daryl\Desktop\WEBSITE\NEWS_Innovation In Focus Q4.pdf"></iframe>
+      <div class="pdf-card view-btn" data-bs-toggle="modal" data-bs-target="#pdfModal" data-pdf="./assets/files/NEWS_Innovation In Focus Q4.pdf">
+        <iframe src="./assets/files/NEWS_Innovation In Focus Q4.pdf"></iframe>
       </div>
     </div>
 
     <!-- PDF 10 -->
     <div class="col-md-6 col-lg-4">
-      <div class="pdf-card view-btn" data-bs-toggle="modal" data-bs-target="#pdfModal" data-pdf="C:\Users\daryl\Desktop\WEBSITE\NEWS_FINAL Q4.pdf">
-        <iframe src="C:\Users\daryl\Desktop\WEBSITE\NEWS_FINAL Q4.pdf"></iframe>
+      <div class="pdf-card view-btn" data-bs-toggle="modal" data-bs-target="#pdfModal" data-pdf="./assets/files/NEWS_FINAL Q4.pdf">
+        <iframe src="./assets/files/NEWS_FINAL Q4.pdf"></iframe>
       </div>
     </div>
 
     <!-- PDF 11 -->
     <div class="col-md-6 col-lg-4">
-      <div class="pdf-card view-btn" data-bs-toggle="modal" data-bs-target="#pdfModal" data-pdf="C:\Users\daryl\Desktop\WEBSITE\NEWS_FINAL_2025 In Focus Q1.pdf">
-        <iframe src="C:\Users\daryl\Desktop\WEBSITE\NEWS_FINAL_2025 In Focus Q1.pdf"></iframe>
+      <div class="pdf-card view-btn" data-bs-toggle="modal" data-bs-target="#pdfModal" data-pdf="./assets/files/NEWS_FINAL_2025 In Focus Q1.pdf">
+        <iframe src="./assets/files/NEWS_FINAL_2025 In Focus Q1.pdf"></iframe>
       </div>
     </div>
   </div>
@@ -133,11 +153,11 @@
   <div class="modal-dialog modal-xl modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">PDF Viewer</h5>
+        <h5 class="modal-title">Newsletter Viewer</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <iframe id="pdfViewer" src="" width="100%" height="700px" style="border: none;"></iframe>
+        <iframe id="pdfViewer" src="" width="100%" height="625px" style="border: none;"></iframe>
       </div>
     </div>
   </div>
