--- a/tech portfolio.html
+++ b/tech portfolio.html
@@ -6,7 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TECH PROFILE</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="./styles/tech-portfolio.css">
+  <link rel="stylesheet" href="./styles/media-resource-navbar.css">
+  <link rel="stylesheet" href="/styles/global.css">
 </head>
 
 <body>
@@ -17,29 +20,45 @@
       Your browser does not support the video tag.
     </video>
   </div>
+<!-- Header -->
+<header>
+  <div class="heading" data-aos="fade-down" data-aos-duration="1000">
+    <ul class="heading-list mt-1">
+      <li class="heading-content-email"><i class="fas fa-envelope"></i> kmc@psau.edu.ph</li>
+      <li class="heading-content-phone"><i class="fas fa-phone"></i> +63 900 000 0000</li>
+      <li class="heading-content-location"><i class="fas fa-map-marker-alt"></i> PAC, San Agustin, Magalang, Pampanga, Philippines </li>
+      <li class="heading-content-social">
+        <a href="https://www.facebook.com/psau.kmc" class="social-icon" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#" class="social-icon"><i class="fa-brands fa-youtube"></i></a>
+        <a href="#" class="social-icon"><i class="fa-brands fa-tiktok"></i></a>
+        <a href="mailto:kmc@psau.edu.ph" class="social-icon"><i class="fas fa-envelope"></i></a>
+      </li>
+    </ul>
+  </div>
+</header>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-    <div class="container-fluid">
-      <a class="navbar-brand mx-auto d-flex align-items-center" href="Homepage.html">Home</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link text-white" href="ictv.html">ICTV</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="iec.html">IEC Materials</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="newsletter.html">Newsletter</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="modules.html">Modules</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="tech portfolio.html">Tech Portfolio</a></li>
-        </ul>
-      </div>
+<!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container-fluid justify-content-center"> <!-- center content -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+          <ul class="navbar-nav text-center">
+              <li class="nav-item"><a class="nav-link text-white" href="Homepage.html">Home</a></li>
+              <li class="nav-item"><a class="nav-link text-white" href="ictv.html">ICTV</a></li>
+              <li class="nav-item"><a class="nav-link text-white" href="iec.html">IEC Materials</a></li>
+              <li class="nav-item"><a class="nav-link text-white" href="newsletter.html">Newsletter</a></li>
+              <li class="nav-item"><a class="nav-link text-white" href="modules.html">Modules</a></li>
+              <li class="nav-item"><a class="nav-link text-white active" href="tech portfolio.html">Tech Portfolio</a></li>
+          </ul>
+        </div>
     </div>
   </nav>
 
   <!-- Image Section -->
-  <section class="container my-5">
+  <section class="container-page my-5" style="padding-top: 80px">
     <div class="row g-4">
       <!-- Repeat image blocks as needed -->
       <div class="col-md-6 col-lg-4">
@@ -130,22 +149,21 @@
       </div>
   </section>
 
-  <!-- Image Zoom Modal -->
-  <div class="modal fade" id="imageModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-xl">
-      <div class="modal-content bg-transparent border-0 position-relative">
-        <button type="button" class="btn-close position-absolute top-0 end-0 m-3 bg-white p-2 rounded-circle"
-          data-bs-dismiss="modal" aria-label="Close"></button>
-        <div class="modal-body text-center p-0">
-          <img id="modalImage" src="" alt="" class="img-fluid rounded-4 shadow-lg" />
-          <p id="modalCaption"
-            class="text-white bg-dark bg-opacity-75 mt-2 p-2 rounded-3 d-inline-block"></p>
-        </div>
-        <button id="prevBtn" class="btn btn-light position-absolute top-50 start-0 translate-middle-y ms-3">&#8592;</button>
-        <button id="nextBtn" class="btn btn-light position-absolute top-50 end-0 translate-middle-y me-3">&#8594;</button>
+<!-- Image Zoom Modal -->
+<div class="modal fade" id="imageModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-xl">
+    <div class="modal-content bg-transparent border-0 position-relative">
+      <button type="button" class="btn-close custom-close position-absolute top-0 end-0"
+        data-bs-dismiss="modal" aria-label="Close"></button>
+      <div class="modal-body text-center p-0">
+        <img id="modalImage" src="" alt="" class="img-fluid rounded-4 shadow-lg" />
+        <p id="modalCaption" class="text-white bg-dark bg-opacity-75 mt-2 p-2 rounded-3 d-inline-block"></p>
       </div>
+      <button id="prevBtn" class="btn btn-light position-absolute top-50 start-0 translate-middle-y ms-3">&#8592;</button>
+      <button id="nextBtn" class="btn btn-light position-absolute top-50 end-0 translate-middle-y me-3">&#8594;</button>
     </div>
   </div>
+</div>
 
   <!-- Footer -->
   <footer>
@@ -154,67 +172,67 @@
 
   <!-- Bootstrap + Custom Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const images = document.querySelectorAll(".image-container");
-      const modal = new bootstrap.Modal(document.getElementById("imageModal"));
-      const modalImg = document.getElementById("modalImage");
-      const modalCaption = document.getElementById("modalCaption");
-      const allImages = Array.from(document.querySelectorAll(".image-container img"));
-      let currentIndex = 0;
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const images = document.querySelectorAll(".image-container");
+    const modal = new bootstrap.Modal(document.getElementById("imageModal"));
+    const modalImg = document.getElementById("modalImage");
 
-      // Fade-in animation when images scroll into view
-      const observer = new IntersectionObserver(entries => {
-        entries.forEach(entry => {
-          if (entry.isIntersecting) {
-            entry.target.classList.add("visible");
-          }
-        });
-      }, { threshold: 0.1 });
 
-      images.forEach(img => observer.observe(img));
+    const allImages = Array.from(document.querySelectorAll(".image-container img"));
+    let currentIndex = 0;
 
-      // Click to open modal
-      allImages.forEach((img, i) => {
-        img.addEventListener("click", () => {
-          showImage(i);
-        });
-      });
-
-      function showImage(index) {
-        const img = allImages[index];
-        modalImg.src = img.src;
-        modalImg.alt = img.alt;
-        modalCaption.textContent = img.alt;
-        currentIndex = index;
-        modal.show();
-      }
-
-      document.getElementById("prevBtn").addEventListener("click", () => {
-        currentIndex = (currentIndex - 1 + allImages.length) % allImages.length;
-        showImage(currentIndex);
-      });
-
-      document.getElementById("nextBtn").addEventListener("click", () => {
-        currentIndex = (currentIndex + 1) % allImages.length;
-        showImage(currentIndex);
-      });
-
-      document.addEventListener("keydown", e => {
-        if (!document.getElementById("imageModal").classList.contains("show")) return;
-
-        if (e.key === "ArrowLeft") {
-          currentIndex = (currentIndex - 1 + allImages.length) % allImages.length;
-          showImage(currentIndex);
-        } else if (e.key === "ArrowRight") {
-          currentIndex = (currentIndex + 1) % allImages.length;
-          showImage(currentIndex);
-        } else if (e.key === "Escape") {
-          modal.hide();
+    const observer = new IntersectionObserver(entries => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add("visible");
         }
       });
+    }, { threshold: 0.1 });
+
+    images.forEach(img => observer.observe(img));
+
+    allImages.forEach((img, i) => {
+      img.addEventListener("click", () => {
+        showImage(i);
+      });
     });
-  </script>
+
+    function showImage(index) {
+      const img = allImages[index];
+      modalImg.src = img.src;
+      modalImg.alt = img.alt;
+
+
+      currentIndex = index;
+      modal.show();
+    }
+
+    document.getElementById("prevBtn").addEventListener("click", () => {
+      currentIndex = (currentIndex - 1 + allImages.length) % allImages.length;
+      showImage(currentIndex);
+    });
+
+    document.getElementById("nextBtn").addEventListener("click", () => {
+      currentIndex = (currentIndex + 1) % allImages.length;
+      showImage(currentIndex);
+    });
+
+    document.addEventListener("keydown", e => {
+      if (!document.getElementById("imageModal").classList.contains("show")) return;
+
+      if (e.key === "ArrowLeft") {
+        currentIndex = (currentIndex - 1 + allImages.length) % allImages.length;
+        showImage(currentIndex);
+      } else if (e.key === "ArrowRight") {
+        currentIndex = (currentIndex + 1) % allImages.length;
+        showImage(currentIndex);
+      } else if (e.key === "Escape") {
+        modal.hide();
+      }
+    });
+  });
+</script>
 </body>
 
 </html>
